PersonalDevOrg/force-app/main/default/objects/Car__c/fields/Available_for_Rent__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Rent</label>
    <type>Checkbox</type>
</CustomField>