PersonalDevOrg/force-app/main/default/objects/Car__c/fields/Build_Year__c.field-meta.xml
<CustomField>
    <fullName>Build_Year__c</fullName>
    <label>Build Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>