PersonalDevOrg/force-app/main/default/objects/Car__c/fields/Car_Name__c.field-meta.xml
<CustomField>
    <fullName>Car_Name__c</fullName>
    <label>Car Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>