PersonalDevOrg/force-app/main/default/objects/Car__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Type</label>
    <referenceTo>Car_Type__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>