PersonalDevOrg/force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_for_Rent__c</columns>
    <columns>Car_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Geolocation__c</columns>
    <columns>Mileage__c</columns>
    <columns>Per_day_Rent__c</columns>
    <columns>Picture__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>